# WeDPR-Lab-Crypto

./: Cargo.toml  README.md
.github/workflows/: features_test.yml
common/coder/base64/: Cargo.toml
common/coder/base64/src/: lib.rs
common/coder/hex/: Cargo.toml
common/coder/hex/src/: lib.rs
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/utils/: Cargo.toml
common/utils/src/: constant.rs  lib.rs  wedpr_trait.rs
crypto/ecies/secp256k1/: Cargo.toml
crypto/ecies/secp256k1/src/: lib.rs
crypto/hash/keccak256/: Cargo.toml
crypto/hash/keccak256/src/: lib.rs
crypto/hash/sm3/: Cargo.toml
crypto/hash/sm3/src/: lib.rs
crypto/signature/secp256k1/: Cargo.toml
crypto/signature/secp256k1/src/: lib.rs
crypto/signature/sm2/: Cargo.toml
crypto/signature/sm2/src/: lib.rs
crypto/vrf/curve25519/: Cargo.toml
crypto/vrf/curve25519/src/: lib.rs
crypto/zkp/discrete_logarithm_proof/: Cargo.toml
crypto/zkp/discrete_logarithm_proof/benches/: dlp.rs
crypto/zkp/discrete_logarithm_proof/src/: lib.rs
crypto/zkp/range_proof/: Cargo.toml
crypto/zkp/range_proof/benches/: proof.rs
crypto/zkp/range_proof/src/: lib.rs
crypto/zkp/utils/: Cargo.toml
crypto/zkp/utils/src/: config.rs  lib.rs
crypto/zkp/zktransfer/: Cargo.toml  mint_commitment.txt  mint_proof.txt  transfer_commitment2.txt  transfer_knowledge_proof.txt  withdraw_commitment.txt  withdraw_knowledge_proof.txt  withdraw_value_proof.txt
crypto/zkp/zktransfer/benches/: zktransfer.rs
crypto/zkp/zktransfer/src/: main.rs
ffi/ffi_c/ffi_c_common/: Cargo.toml
ffi/ffi_c/ffi_c_crypto/: Cargo.toml
ffi/ffi_c/ffi_c_crypto/src/: config.rs  ecies.rs  hash.rs  lib.rs  signature.rs  vrf.rs
ffi/ffi_c/ffi_c_zkp/: Cargo.toml
ffi/ffi_c/ffi_c_zkp/src/: discrete_logarithm_proof.rs  lib.rs  range_proof.rs  utils.rs
ffi/ffi_common/: Cargo.toml
ffi/ffi_common/src/: lib.rs  utils.rs
ffi/ffi_java/ffi_java_crypto/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_crypto/src/: config.rs  ecies.rs  hash.rs  lib.rs  signature.rs  vrf.rs
ffi/ffi_java/ffi_java_zkp/: Cargo.toml  NativeInterface.java
ffi/ffi_java/ffi_java_zkp/src/: discrete_logarithm_proof.rs  lib.rs  range_proof.rs
ffi/ffi_macros/src/: lib.rs
protos/: Cargo.toml
protos/crypto/: common.proto  zkp.proto
protos/src/: main.rs
