[workspace]

members = [
"common/macros",
    "common/utils",
    "common/coder/base64",
    "common/coder/hex",
    "crypto/vrf/curve25519",
    "crypto/zkp/utils",
"crypto/zkp/discrete_logarithm_proof",
"crypto/zkp/range_proof",
    "crypto/signature/secp256k1",
    "crypto/signature/sm2",
    "crypto/hash/keccak256",
    "crypto/hash/sm3",
"crypto/ecies/secp256k1",
 "ffi/ffi_common",
     "ffi/ffi_c/ffi_c_crypto",
     "ffi/ffi_c/ffi_c_common",
 "ffi/ffi_java/ffi_java_crypto",
"ffi/ffi_macros",
"protos",
]
