[package]
name = "wedpr_l_crypto_zkp_discrete_logarithm_proof"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared zkp Function implement discrete logarithm proof."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
curve25519-dalek = { version = "4.1", features = [ "serde" ] }
wedpr_l_crypto_zkp_utils = {version = "1.3.0", path = "../utils/"}
wedpr_l_macros = "1.0.0"
wedpr_l_protos =  "1.2.0"
wedpr_l_utils = "1.1.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dlp"
harness = false
