[package]
name = "zktransfer"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1", features = [ "serde" ] }
wedpr_l_crypto_zkp_utils = {version = "1.3.0", path = "../utils/"}
wedpr_l_crypto_zkp_range_proof = {version = "1.2.0", path = "../range_proof/"}
wedpr_l_crypto_zkp_discrete_logarithm_proof = {version = "1.3.0", path = "../discrete_logarithm_proof/"}
wedpr_l_macros = "1.0.0"
hex = "0.4.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "zktransfer"
harness = false