[package]
name = "wedpr_ffi_c_crypto"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wedpr_f_base64 = ["wedpr_ffi_common_base64"]
wedpr_f_hex = ["wedpr_ffi_common_hex"]
wedpr_f_ecies_secp256k1 = ["wedpr_l_crypto_ecies_secp256k1"]
wedpr_f_signature_secp256k1 = ["wedpr_l_crypto_signature_secp256k1"]
wedpr_f_hash_keccak256 = ["wedpr_l_crypto_hash_keccak256"]

[lib]
name = "ffi_c_crypto"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
libc = "0.2.60"
protobuf = "2.10.1"
lazy_static = "1.4.0"
wedpr_ffi_c_common = { path = "../ffi_c_common/" }
wedpr_ffi_macros = { path = "../../../ffi/ffi_macros/" }
wedpr_l_macros = { path = "../../../common/macros/" }
wedpr_l_protos = { path = "../../../protos/" }
wedpr_l_utils = { path = "../../../common/utils" }

wedpr_ffi_common_base64 = { package = "wedpr_ffi_common" ,path = "../../ffi_common/", features = [ "wedpr_f_base64" ], optional = true }
wedpr_ffi_common_hex = { package = "wedpr_ffi_common", path = "../../ffi_common/", features = [ "wedpr_f_hex" ], optional = true }

wedpr_l_crypto_ecies_secp256k1 = {path = "../../../crypto/ecies/secp256k1", optional = true}
wedpr_l_crypto_signature_secp256k1 = {path = "../../../crypto/signature/secp256k1", optional = true}
wedpr_l_crypto_hash_keccak256 = {path = "../../../crypto/hash/keccak256", optional = true}


# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"
