[package]
name = "wedpr_ffi_java_zkp"
version = "0.1.0"
edition = "2021"

[lib]
name = "ffi_java_zkp"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
jni = "0.13.0"
wedpr_ffi_common = { path = "../../ffi_common" }
wedpr_ffi_macros = { path = "../../ffi_macros" }
wedpr_l_crypto_zkp_utils = {version = "1.3.0", path = "../../../crypto/zkp/utils/"}
wedpr_l_crypto_zkp_discrete_logarithm_proof = { version = "1.3.0", path = "../../../crypto/zkp/discrete_logarithm_proof/"}
wedpr_l_crypto_zkp_range_proof = { path = "../../../crypto/zkp/range_proof/"}
wedpr_l_utils = "1.1.0"


